--- a/error en busqueda/error.css
+++ b/error en busqueda/error.css
@@ -736,7 +736,7 @@ body{
 	display: none;
 	height: 50px;
 	background: linear-gradient(to right, #400, #900);
-	width: 425px;
+	width: 100vw;
 	transform: translateY(100px);
 	z-index: 500;
 	position: fixed;
@@ -748,7 +748,7 @@ body{
 }
 
 .icono-de-inicio-responsive{
-	transform: translateX(200px);
+	transform: translateX(220px);
 	font-size: 27px;
 	margin-top: 3px;
 	width: 30px;
@@ -768,7 +768,7 @@ body{
 }
 
 .logo-living-responsive{
-	transform: translateX(100px);
+	transform: translateX(120px);
 	font-family: Carter One, verdana;
 	width: 145px;
 	text-align: center;
@@ -1029,12 +1029,133 @@ body{
 	display: none;
 }
 
+/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+@media only screen and (max-width: 470px){
+	.body::-webkit-scrollbar{
+		width: 3px;
+		height: 3px;
+	}
+	.body::-webkit-scrollbar-thumb{
+		background-color: #777;
+		border-radius: 2px;
+	}
+
+
+	.body::-webkit-scrollbar-track{
+		background-color: #000;
+		border-radius: 2px;
+	}
+	.barra-de-navegacion, .ventanas{
+		display: none;
+	}
+
+	.input{
+		margin-top: 10px;
+		margin-bottom: 5px;
+		transform: translateX(10px);
+	}
+	.input input{
+		width: 150px;
+		padding: 3px 0px 5px 7px;
+		font-size: 12px;
+		background-color: #533;
+		border: 1px solid #600;
+		outline: none;
+	}
+	.input input:focus{
+		outline: 2px solid #900;
+		animation: agrandarInputResponsive .5s forwards;
+		
+	}
+	@keyframes agrandarInputResponsive{
+		0%{
+
+		}
+		100%{
+			width: 220px;
+		}
+	}
+	.buscador-responsive{
+		transform: translateY(-3px);
+	}
+
+	.lista-de-series-responsive{
+		display: block;
+	}
+		
+	
+	.barra-de-navegacion-responsive{
+		display: block;
+		display: flex;
+		padding-top: 10px;
+		position: fixed;
+		width: 100vw;
+	}
+
+	.container-text-error{
+		width: 410px;
+		transform: translateY(200px);
+		height: 130px;
+		margin-left: 15px;
+		font-size: 12px;
+	}
+	
+
+
+	.footer{
+		width: 100vw;
+		height: 150px;
+		display: flex;
+		flex-direction: column;
+		transform: translateY(340px);
+
+		
+	
+	}
+	.footer-parrafo{
+		text-align: center;
+		font-family: verdana;
+		color: #b00;
+		font-size: 10px;
+		transform: translateY(10px);
+	}
+
+	.logo-de-cuevana{
+		transform: translateY(-20px);
+		margin: auto;
+		height: 30px;
+
+	}
+
+	
+	.iconos-de-footer{
+		display: flex;
+		margin: auto;
+		margin-top: -50px;
+		transform: translateX(0px);
+		position: relative;
+	}
+
+	.iconos-de-footer img{
+		margin-right: 10px;
+		width: 30px;
+		height: 30px;
+	
+	}
+	
+}
+
+
+
 
 /*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
 /*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
 /*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
 /*DISEÑO RESPONSIVE PARA PANTALLAS 425PX*/
-@media only screen and (max-width: 499px){
+@media only screen and (max-width: 425px){
 
 	.body::-webkit-scrollbar{
 		width: 3px;
@@ -1107,7 +1228,7 @@ body{
 
 
 	.footer{
-		width: 425px;
+		
 		height: 150px;
 		display: flex;
 		flex-direction: column;
@@ -1168,10 +1289,7 @@ body{
 	}
 	
 
-	.footer{
-		width: 390px;
-	}
-
+	
 }
 
 
@@ -1202,9 +1320,7 @@ body{
 	
 
 
-	.footer{
-		width: 375px;
-	}
+	
 
 }
 
@@ -1234,9 +1350,7 @@ body{
 		font-size: 11px;
 	}
 	
-	.footer{
-		width: 360px;
-	}
+	
 
 }
 
@@ -1280,9 +1394,5 @@ body{
 	}
 
 	
-	.footer{
-			width: 320px;
-		}
-
-		
+	
 }
