--- a/secciones/cuarta/cuarta.css
+++ b/secciones/cuarta/cuarta.css
@@ -863,7 +863,7 @@
 		
 	}
 
-	.boton-1 button:nth-child(4){
+	.boton-1 button:nth-child(2){
 		border-bottom: 3px solid #fa0;
 	}
 
@@ -1116,8 +1116,8 @@
 		}
 	}
 
-	.marcar-posicion-1 button:nth-child(1){
-		
+	.marcar-posicion-1 button:nth-child(4){
+		background-color: #700;
 	}
 
 	
@@ -1877,7 +1877,7 @@
 	/*RESPONSIVE DE PANTALLAS 16:9 800PX*/
 	@media only screen and (max-width: 1100px) and (min-width: 1020px){
 
-		
+
 		
 		.input{
 			transform: translateX(200px);
@@ -2544,8 +2544,7 @@
 
 	}
 
-
-	/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
+/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
 	/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
 	/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
 	/*DISEÑO RESPONSIVE PARA PANTALLAS 445PX*/
